pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a3028-pod-test
  namespace: skala3-ai1
  labels:
    app: a3028-pod-test
spec:
  serviceAccountName: default
  containers:
  - name: webserver
    image: nginx:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
