service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: a3028-app-service-v2   # [중요] 인그레스가 찾는 바로 그 이름!
  namespace: skala3-ai1
spec:
  selector:
    app: a3028-app-v2          # [중요] 아까 만든 v2 Deployment의 라벨과 똑같아야 함!
  ports:
    - protocol: TCP
      port: 8080               # 서비스가 받는 포트
      targetPort: 8080         # 파드(컨테이너)의 포트
  type: ClusterIP
