ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a3028-app-ingress-carnary
  namespace: skala3-ai1
  annotations:
    kubernetes.io/ingress.class: public-nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: public-nginx  #  클래스 이름
  rules:
  - host: a3028.project.skala-ai.com  #  호스트 주소
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a3028-app-service-v2  # 서비스 이름
            port:
              number: 8080           # 서비스의 port 번호와 일치해야 함
